--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@ p {
 }
 
 .taskBox {
-  background-color: rgb(143, 202, 231, 0.5);
+  background-color: rgb(65, 255, 115, 0.3);
   border: 2px solid black;
   margin: 6px;
   padding-left: 9px;
@@ -147,4 +147,22 @@ p {
   padding-top: 7px;
   padding-bottom: 3px;
   text-shadow: 2px 2px #0b1c3d;
+}
+
+#clearTasks {
+  margin: 10px;
+  font-family: 'Bebas Neue', sans-serif;
+  background-color: rgba(251, 0, 12, 1);
+  border-radius: 4px;
+  font-size: 20px;
+  padding-left: 22px;
+  padding-right: 22px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  color: rgba(245, 245, 245);
+  border: 2px solid black;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 100px;
+  margin-bottom: 45px;
 }
