--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ p {
   font-family: Lato;
 }
 
+/*
 .taskBox {
   background-color: rgb(65, 255, 115, 0.3);
   border: 2px solid black;
@@ -14,13 +15,27 @@ p {
   margin-right: 30px;
 }
 
+*/
+.taskBox {
+  border-radius: 4px;
+  backdrop-filter: blur(20px);
+  background-color: rgba(65, 255, 115, 0.3);
+  box-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+  margin: 6px;
+  padding-left: 9px;
+  padding-top: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border: 2px solid black;
+}
+
 .taskBoxUncompleted {
   background-color: rgb(143, 202, 231, 0.1);
   border: 2px solid black;
   margin: 6px;
   padding-left: 9px;
   padding-top: 10px;
-  border-radius: 3px;
+  border-radius: 4px;
   color: red;
   margin-left: 30px;
   margin-right: 30px;
@@ -77,7 +92,7 @@ p {
   font-size: 15px;
   float: right;
   margin-right: 6px;
-  background-color: rgba(255, 83, 97, 0.7);
+  background-color: rgba(255, 83, 97, 0.55);
   border-radius: 3px;
   border-color: rgb(35, 47, 52, 0.8);
   color: black;
